--- a/client/resources/pages/index.html
+++ b/client/resources/pages/index.html
@@ -5,7 +5,7 @@
     <link href='https://fonts.googleapis.com/css?family=Lato:100,300' rel='stylesheet' type='text/css'>
 </head>
 <body class="loading">
-<section class="main"></section>
+<div class="editor" style="width: 800px; margin:2em auto;"></div>
 <script type="text/javascript" src="js/jsload.js"></script>
 </body>
 </html>
