Saving html from editor as a chunked file.

--- a/client/resources/pages/index.html
+++ b/client/resources/pages/index.html
@@ -5,7 +5,10 @@
     <link href='https://fonts.googleapis.com/css?family=Lato:100,300' rel='stylesheet' type='text/css'>
 </head>
 <body class="loading">
-<div class="editor" style="width: 800px; margin:2em auto;"></div>
+<div class="container">
+    <div class="editor"></div>
+    <input type="button" value="Save" class="save">
+</div>
 <script type="text/javascript" src="js/jsload.js"></script>
 </body>
 </html>
