Experiment document content Update/Show endpoints done. Experiment create endpoint done.

--- a/client/resources/pages/index.html
+++ b/client/resources/pages/index.html
@@ -7,7 +7,7 @@
 <body class="loading">
 <div class="container">
     <div class="editor"></div>
-    <input type="button" value="Save" class="save">
+    <a class="save">Save</a>
 </div>
 <script type="text/javascript" src="js/jsload.js"></script>
 </body>
