--- a/client/resources/pages/index.html
+++ b/client/resources/pages/index.html
@@ -5,9 +5,8 @@
     <link href='https://fonts.googleapis.com/css?family=Lato:100,300' rel='stylesheet' type='text/css'>
 </head>
 <body class="loading">
-<div class="container">
-    <div class="editor"></div>
-    <a class="save">Save</a>
+<header class="header"></header>
+<div id="content">
 </div>
 <script type="text/javascript" src="js/jsload.js"></script>
 </body>
