Set up Backbone for pushstate urls

--- a/client/resources/pages/index.html
+++ b/client/resources/pages/index.html
@@ -4,10 +4,15 @@
     <title>Marketing Experiments</title>
     <link href='https://fonts.googleapis.com/css?family=Lato:100,300' rel='stylesheet' type='text/css'>
 </head>
-<body class="loading">
-<header class="header"></header>
-<div id="content">
+<body>
+<div class="layout">
+    <div id="header-wrapper">
+        <header id="header"></header>
+    </div>
+    <div id="content">
+    </div>
+    <footer id="footer"></footer>
 </div>
-<script type="text/javascript" src="js/jsload.js"></script>
+<script type="text/javascript" src="js/jsload.js" id="jsloader"></script>
 </body>
 </html>
