--- a/client/resources/pages/index.html
+++ b/client/resources/pages/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>Marketing Experiments</title>
-    <link href='https://fonts.googleapis.com/css?family=Lato:100,300' rel='stylesheet' type='text/css'>
-</head>
+    <link href='https://fonts.googleapis.com/css?family=Lato:400' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'></head>
 <body>
 <div class="layout">
     <div id="header-wrapper">
